# wui

./: .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml
apps/admin/: go.mod
apps/admin/cmd/wui-admin/: main.go
apps/admin/internal/config/: config.go
apps/admin/internal/models/: models.go
apps/admin/web/: package.json
apps/admin/web/src/: App.tsx
apps/client/: package.json
apps/client/src/: App.css  App.tsx  main.tsx
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/src/: lib.rs  main.rs  models.rs
apps/client/src-tauri/src/config/: mod.rs
apps/client/src-tauri/src/core/: mod.rs
apps/client/src-tauri/src/proxy/: mod.rs
apps/client/src-tauri/src/subscription/: mod.rs
apps/client/src-tauri/src/tray/: mod.rs
apps/client/src/locales/: en.json  zh.json
apps/license-server/: README.md  go.mod
apps/license-server/cmd/: main.go
apps/license-server/install/: install.sh  uninstall.sh
apps/license-server/internal/api/: handlers.go
apps/server/: .wui-restart  go.mod  go.sum
apps/server/cmd/: main.go
apps/server/web/: index.html
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/website/: index.html  package.json  vite.config.ts
docs/: DEPLOYMENT.md  QUICKSTART.md  SUMMARY.md  TESTING.md
docs/architecture/: MULTI_TENANT.md
install/: install.sh  uninstall.sh
internal/config/: license_config.go
internal/license/: cache.json
scripts/: build.sh  test.sh
test-env/test-env/configs/: 1.json
(+79 files in other folders)
